update to JS SDK

--- a/store/package.json
+++ b/store/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@airwallex/components-sdk": "^1.20.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "airwallex-payment-elements": "^1.45.0",
     "axios": "^1.7.3",
     "bootstrap": "^5.2.1",
     "react": "^18.2.0",
